# disjunctivegraphbounding

./: Cargo.toml  jsp_results_1.json  results-2024-09-25.md
instances/: disjunctive_optrail_2024_TCSIN_2024_02_05_11_51_13_932_1 (6 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_05_19_36_10_740_1 (6 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_05_19_36_10_740_2 (5 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_06_16_13_18_524_1 (13 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_06_19_01_58_474_1 (5 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_06_21_01_07_903_1 (9 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_07_17_48_33_658_1 (7 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_07_18_28_08_669_1 (8 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_07_18_28_08_669_2 (6 tr.).json  disjunctive_optrail_2024_TCSIN_2024_02_07_18_37_40_491_1 (9 tr.).json  disjunctive_testinstances_headway1.json  disjunctive_testinstances_swapping1.json  disjunctive_testinstances_swapping2.json  jsp_abz6.json  jsp_abz7.json  jsp_abz8.json  jsp_abz9.json  jsp_ft10.json  jsp_ft20.json  jsp_la02.json  jsp_la05.json  jsp_la06.json  jsp_la07.json  jsp_la08.json  jsp_la09.json  jsp_la10.json  jsp_la11.json  jsp_la12.json  jsp_la13.json  jsp_la14.json  jsp_la15.json  jsp_la16.json  jsp_la17.json  jsp_la18.json  jsp_la19.json  jsp_la20.json  jsp_la21.json  jsp_la22.json  jsp_la23.json  jsp_la24.json  (+119 more)
instances_easy/: jsp_abz5.json  jsp_ft06.json  jsp_la01.json  jsp_la03.json  jsp_la04.json  jsp_orb01.json
randomrail/: Cargo.toml  index.html  main.js
src/: bnb.rs  main.rs  (+5 more)
(+4 files in other folders)
