[package]
name = "disjunctivegraphbounding"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
highs = "1.6.1"
log = "0.4.22"
petgraph = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tinyvec = { version = "1.8.0", features = ["alloc", "serde"] }
